# todo_list

./: .gitignore
backend/: .flake8  pyproject.toml  wsgi.py
backend/config/: gunicorn_config.py  nginx.conf  settings.yml
backend/migrations/versions/: 89f2555ddf44_initial_user_blacklistedtoken_and_.py
backend/todo_list/: __init__.py  db_engine.py  exceptions.py  loggers.py  main.py  middleware.py  mutation.py  query.py  view.py
backend/todo_list/todo_records/: models.py
backend/todo_list/todo_records/graphql_resources/: __init__.py  mutations.py  queries.py  types.py  utils.py
backend/todo_list/todo_records/graphql_resources/connection/: __init__.py  exceptions.py  types.py  utils.py
backend/todo_list/users/: models.py  utils.py
backend/todo_list/users/graphql_resources/: __init__.py  mutations.py  types.py
frontend/: .env  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  constants.ts  hooks.ts  index.css  utils.ts
frontend/src/components/: LoginForm.tsx  ToDoRecord.tsx  ToDoRecordCreationForm.tsx  ToDoRecordsHeader.tsx  ToDoRecordsPagination.tsx  ToDoRecordsPaginationItem.tsx  ToDoRecordsTableHeader.tsx
frontend/src/containers/: LoginLayout.tsx  MainLayout.tsx  ToDoRecordCreationFormLayout.tsx  ToDoRecordsLayout.tsx  ToDoRecordsTable.tsx
frontend/src/graphqlResources/: apolloCache.ts  apolloClient.ts  queries.js  types.ts  utils.ts
frontend/src/store/actions/: todoOrdering.ts
frontend/src/store/reducers/: rootReducer.ts  todoOrdering.ts
